<resources>
    <string name="app_name">Mobile Scan&amp;Pay Tool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setari</string>
    <string name="title_shopping_cart">Cos de cumparaturi</string>
    <string name="title_product_detail">Informatii Produs</string>
    <string name="title_activity_settings">Setari</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_warning">Avertizari</string>
    <string name="pref_header_warning_summary">Avertizeaza-ma cand produsele contin elemente din lista urmatoare</string>


    <!-- Example General settings -->
    <string name="pref_header_general">Preferinte informatii produs</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="generic_load_title">Please wait</string>
    <string name="generic_load_message">Data is loading</string>
    <string name="label_product_description">Descriere produs</string>
    <string name="label_product_ingredients">Ingrediente</string>
    <string name="title_activity_last_checkout">Ultima plata</string>
    <string name="checkout_text_info">Comunicati casierului urmatorul cod al comenzii:</string>
    <string name="total_sum">Total</string>
    <string name="no_last_checkout_text">Nu ati efectuat cumparaturi inca.</string>
</resources>
